# kas

./: .gitignore  Makefile  README.md  generate_sprites.py  install.sh  primes.py  pyproject.toml  starfield.py  starfield_v2.py
.github/workflows/: ci.yml
agent/: cli.py  config.py  main.py  tui.py
agent/adapters/audio/: _transcribe_worker.py  record.py  stt.py  tts.py
agent/adapters/embeddings/: __init__.py  gguf.py  hashing.py  mlx.py  model2vec.py
agent/adapters/retrieval/: bm25.py  stores.py  vector.py
agent/adapters/tools/: _file_tools.py  executor.py  files.py  image.py  memory.py  web.py
agent/core/: ai_wellbeing.py  compaction.py  loop.py  self_skill.py  spec.py  supercharge.py  toolspec.py
agent/ports/: memory.py
agent/tui/: __init__.py  app.py  commands.py  image_preview.py  io.py  loops.py  stats.py  widgets.py
agent/tui/commands/: __init__.py  _install.py  _voice.py  ai_wellbeing.py  art.py  base.py  compact.py  converse.py  ctx.py  fx.py  help.py  image.py  kv.py  listen.py  memory.py  model.py  models.py  pause.py  rag.py  sandbox.py  say.py  self_skill.py  spec.py  stats.py  status.py  viz.py  (+4 more)
docs/: architecture-review.md  backends.md
docs/enhancements/: feat.md  models.md  multimodal.md  skills.md  tools.md  tui.md
docs/reports/: REVIEW-FRAMEWORK.md  code-quality-assessment.md  executive-summary.md  security-assessment.md
docs/v3/: ANALYSIS.md  PLAN.md
mytestreactapp/: package-lock.json  package.json
mytestreactapp/src/: App.jsx  data.js
scripts/: banner.py  bench_models.py  calibrate_voice.py  doctor.py  install_deps.py  perf_report.py  select_model.py  smoke_serve.py
server/: app.py  cli.py  config.py  engine.py  prompting.py  registry.py  schema.py
server/backends/: __init__.py  llama_cpp.py  mlx.py  mlx_vlm.py
server/core/: pipeline.py  ports.py
server/prompting/: __init__.py  recover.py  standard_dialects.py  translate.py
tests/: test_ai_wellbeing.py  test_api.py  test_audio.py  test_backends.py  test_bash.py  test_bm25.py  test_body_scroll.py  test_commands.py  test_compaction.py  test_composer.py  test_confirm.py  test_converse.py  test_dialects.py  test_doctor.py  test_embeddings.py  test_engine_live.py  test_files_resolver.py  test_git.py  test_image_preview.py  test_llama_cpp_ctx.py  test_loop.py  test_mdui_gate.py  test_memory.py  test_parser.py  test_recover.py  test_registry.py  test_schema.py  test_scripts.py  test_serve_progress.py  test_server_start.py  test_spec.py  test_tab_complete.py  test_thinking_pane.py  test_tokens.py  test_tools.py  test_vector.py  test_vision.py  test_viz.py
ttm-game/: index.html
ttm-game/src/: App.jsx  index.css
(+14 files in other folders)
